--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "cookies-next": "^6.1.1",
     "lucide-react": "^0.553.0",
     "next": "15.5.6",
     "react": "19.1.0",
